--- a/package.json
+++ b/package.json
@@ -18,8 +18,12 @@
     "@angular/platform-browser": "^17.3.0",
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
+    "bbcodejs": "^0.0.4",
     "bootstrap": "^5.3.8",
     "bootstrap-icons": "^1.13.1",
+    "katex": "^0.16.22",
+    "mathjax-full": "^3.2.2",
+    "ngx-quill": "^17.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
@@ -30,6 +34,7 @@
     "@angular/compiler-cli": "^17.3.0",
     "@types/bootstrap": "^5.2.10",
     "@types/jasmine": "~5.1.0",
+    "@types/katex": "^0.16.7",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
